style.css
html,
body {
  margin: 0;
  padding: 0;
  height: 100vh;
  width: 100vw;
  min-height: 650px;
  background-color: lightsteelblue;
}

/*Grid Item*/
.title { grid-area: title; }
.selector { 
  grid-area: selector;
  display: flex;
  flex-flow: column;
  height: 100%;
}
.graphic { grid-area: graphic; }

/* Grid Container*/
.grid-container {
  display: grid;
  height: 95.9%;
  width: 98%;
  padding: 1%;
  grid-gap: 1% 0.5%;
  grid-template-columns: minmax(150px, 200px) minmax(200px, 95%);
  grid-template-rows: 50px minmax(100px, calc(100% - 50px));
  grid-template-areas:
    "title title"
		"selector graphic"
    ;
  background-color: lightsteelblue;
}

/* Grid Item */
.item {
  background-color: rgba(255, 255, 255, 0.8);
}

.item.title{
  text-align: center;
}

.item.title p{
  text-align: center;
  margin-top: 5px;
  margin-bottom: 5px;
}

/*selector menu*/

/*.component.xn1_selector{
  border-style: solid;
  border-width: 1px;
  border-radius: 5px;
}*/

/*checkbox
.input_Xn{
  display: flex; 
  flex-direction: row;
}

.input_Xn.first{
  height: 30px;
  margin-bottom: 5px;
  margin-top: 5x;
}

.input_Xn.first p:first-of-type{
  width: 80px;
}

p{
  display: block;
  margin-top: auto;
  margin-bottom: auto;
}

.checkbox {
  zoom: 1.5;
  margin-top: auto;
  margin-bottom: auto;
}

.input_mounting{
  height: 80%;
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 5px;
  margin-right: 5px;
}

#sub-check{
  font-size: 12px;
  width: fit-content;
  margin-top: auto;
  margin-bottom: auto;
}

#sub-check>*{
  margin-top: auto;
  margin-bottom: auto;
}*/
/*end check box*/

.selector_input{
  border-style: solid;
  border-width: 1px;
  border-radius: 5px;
  height: 46px;
}

p.lab{
  text-align: center;
}

#input_a{
  margin-bottom: 10px;
}



.width100{
  display: block;
  width: 90%;
  margin-bottom: 8px;
  margin-top: 8px;
  margin-left: auto;
  margin-right: auto;
}

#input_Xn1::-webkit-slider-thumb{
  background: red;
}

#input_Xn2::-webkit-slider-thumb{
  background: green;
}

#input_Xn3::-webkit-slider-thumb{
  background: blue;
}

/*end menu*/

.chk {
  font-size: 14px;
}

.chkBold {
  font-weight: bold;
  font-size: 14px;
}

.lab {
  font-size: 16px;
  font-weight: bold;
}

.play_controls{
  display: flex;
  flex-direction: row;
  text-align: center;
  margin-top: 2px;
  height: 28px;
}

.play_controls button{
  flex: auto;
  display: inline-block;
  width: 35px;
  height: 100%;
  background: none !important;
  border:none;
  outline: none;
  align-items: center;
  font-size: 25px;
}

.play_controls button:focus,
.play_controls button:active {
  outline: none;
}

#export_button{
  height: 25px;
  margin-bottom: 5px;
}

/*title*/
.title>*{
  margin-left: auto;
  margin-right: auto;
}

